--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,10 @@ tqdm==4.42.1
 spacy==2.2.3
 gensim==3.8.1
 torch==1.6.0
-flair==0.4.5
 pyconll==2.2.1
 conllu==4.4
 pandas==1.0.1
 transformers==3.5.1
 srsly==1.0.2
 tweepy
-allennlp
+dadmatools
